# wolfTPM

./: .cyignore  .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  Makefile.am  README.md  SPDM_IMPLEMENTATION.md  autogen.sh  commit-tests.sh  configure.ac  do178_trim_wolftpm.sh  manage_trimmed_sources.sh  pre-commit.sh
.github/: copilot-instructions.md  semgrep-rules.yml
.github/codeql/: codeql-config.yml
.github/workflows/: _resolve-wolfssl.yml  cmake-build.yml  codeql.yml  codespell.yml  coverity-scan-fixes.yml  empty-brace-scan.yml  freestanding-build.yml  fuzz.yml  fwtpm-test.yml  hw-spdm-test.yml  macos-check.yml  make-test-swtpm.yml  multi-compiler.yml  nightly.yml  pqc-build-matrix.yml  pqc-examples.yml  publish-ci-image.yml  release-checks.yml  sanitizer.yml  sbom.yml  seal-test.yml  semgrep.yml  smoke-test.yml  spdm-emu-test.yml  spdm-test.yml  test-uart-swtpm.yml  ubuntu-check.yml  win-test.yml  windows-check.yml  wolfssl-v4.7.0.patch  wolfssl-versions-pqc.yml  wolfssl-versions.yml  zephyr.yml
IDE/: include.am
IDE/Espressif/: CMakeLists.txt  README.md  include.am  sdkconfig.defaults
IDE/Espressif/components/wolftpm/: CMakeLists.txt
IDE/Espressif/components/wolftpm/include/: README.md
IDE/IAR-EWARM/: ewarm-tpm2.ewp  ewarm-tpm2.eww  include.am
IDE/MDK5/: dummy.c  wolfTPM.uvoptx  wolfTPM.uvprojx
IDE/OPENSTM32/: .cproject  .project  include.am
IDE/QNX/: README.md  include.am
IDE/STM32CUBE/: README.md  default_conf.ftl  include.am  wolftpm_test.c  wolftpm_test.h
IDE/VisualStudio/: README.md  include.am  tls_server.vcxproj  user_settings.h  wolfcrypt_test.vcxproj  wolfssl.vcxproj  wolftpm.sln  wolftpm.vcxproj  wrap_test.vcxproj
certs/: ca-ecc.cnf  ca-rsa.cnf  certreq.sh  dummy-ecc.der  dummy-ecc.pem  dummy-rsa.der  dummy-rsa.pem  example-ecc384-key-pub.der  example-ecc384-key-pub.pem  example-rsa2048-key-pub.der  example-rsa2048-key-pub.pem  example-rsa2048-key.der  example-rsa2048-key.pem  include.am  wolf-ca-ecc-cert.pem
cmake/: README.md  config.in  include.am
do178_trimmed_sources/examples/: tpm_test.h  tpm_test_keys.c  tpm_test_keys.h
do178_trimmed_sources/hal/: tpm_io.c  tpm_io.h  tpm_io_atmel.c  tpm_io_barebox.c  tpm_io_espressif.c  tpm_io_infineon.c  tpm_io_linux.c  tpm_io_microchip.c  tpm_io_qnx.c  tpm_io_st.c  tpm_io_xilinx.c
do178_trimmed_sources/src/: tpm2.c  tpm2_cryptocb.c  tpm2_linux.c  tpm2_packet.c  tpm2_param_enc.c  tpm2_tis.c  tpm2_wrap.c
do178_trimmed_sources/wolftpm/: options.h  tpm2.h  tpm2_asn.h  tpm2_linux.h  tpm2_packet.h  tpm2_socket.h  tpm2_swtpm.h  tpm2_types.h  tpm2_winapi.h  tpm2_wrap.h  visibility.h
docs/: Doxyfile  FWTPM.md  README.md  SPDM.md  SWTPM.md  WindowTBS.md  generate_documentation.sh  include.am  test_coverage.txt  test_coverage_report.txt  untested_apis.txt
examples/: README.md  include.am  run_examples.sh  tpm_io.c  tpm_io.h  tpm_io_atmel.c  tpm_io_barebox.c  tpm_io_infineon.c  tpm_io_linux.c  tpm_io_microchip.c  tpm_io_qnx.c  tpm_io_st.c  tpm_io_uboot.c  tpm_io_xilinx.c  tpm_lpc.c  tpm_test.h  tpm_test_keys.c  tpm_test_keys.h
examples/attestation/: README.md  activate_credential.c  attestation.h  certify.c  credential.h  include.am  make_credential.c
examples/bench/: bench.c  bench.h  include.am
examples/boot/: README.md  boot.h  include.am  secret_seal.c  secret_unseal.c  secure_rot.c
examples/clock/: clockSet.c  clockSet.h  include.am
examples/csr/: csr.c  csr.h  include.am
examples/endorsement/: README.md  endorsement.h  get_ek_certs.c  include.am  trusted_certs.h  trusted_certs_der.h  verify_ek_cert.c
examples/firmware/: Makefile  README.md  ifx_fw_extract.c  ifx_fw_update.c  ifx_fw_update.h  include.am  st33_fw_update.c  test_st33_firmware.sh
examples/gpio/: gpio.h  gpio_config.c  gpio_nuvoton.c  gpio_read.c  gpio_set.c  include.am  read.c
examples/keygen/: create_primary.c  ecdh.c  external_import.c  include.am  keygen.c  keygen.h  keygen_paramenc.c  keyimport.c  keyload.c  keyload_paramenc.c
examples/management/: da_check.c  flush.c  flush.h  include.am  management.h  tpmclear.c
examples/native/: include.am  native_test.c  native_test.h
examples/nvram/: counter.c  extend.c  include.am  nvauth.c  nvram.h  policy_nv.c  read.c  seal_nv.c  seal_policy_auth_nv.c  seal_policy_auth_nv_external.c  store.c  store.h
examples/pcr/: README.md  demo-quote-zip.sh  demo.sh  extend.c  extend.h  include.am  pcr.h  policy.c  policy_sign.c  quote.c  (+7 more)
hal/: README.md  include.am  tpm_io.c  tpm_io.h  tpm_io_atmel.c  tpm_io_barebox.c  tpm_io_espressif.c  tpm_io_fwtpm.c  tpm_io_infineon.c  tpm_io_linux.c  tpm_io_microchip.c  tpm_io_mmio.c  tpm_io_qnx.c  tpm_io_st.c  tpm_io_uboot.c  tpm_io_xilinx.c  tpm_io_zephyr.c
m4/: ax_debug.m4  ax_harden_compiler_flags.m4
scripts/: check-empty-brace-scopes.py  fwtpm_emu_test.sh  hw-runner-health-check.sh  include.am  swtpm_sim.test  tls_setup.sh  tpm2_tools_test.sh
spdm/: README.md  include.am
src/: include.am  tpm2.c  tpm2_asn.c  tpm2_crypto.c  tpm2_cryptocb.c  tpm2_cyusb.c  tpm2_linux.c  tpm2_packet.c  tpm2_param_enc.c  tpm2_socket.c  tpm2_spdm.c  tpm2_spdm_libspdm.c  tpm2_swtpm.c  tpm2_tis.c  tpm2_usb.c  tpm2_util.c  tpm2_winapi.c  tpm2_wrap.c  tpm_asn.c
tests/: check_doc_constants.sh  fwtpm_check.sh  fwtpm_da_retry.sh  fwtpm_unit_tests.c  include.am  pqc_kat_vectors.h  pqc_mssim_e2e.sh  tls_pq_e2e.sh  unit_tests.c
wolftpm/: doxygen.h  include.am  options.h.in  tpm2.h  tpm2_asn.h  tpm2_crypto.h  tpm2_cyusb.h  tpm2_linux.h  tpm2_packet.h  tpm2_param_enc.h  tpm2_pqc.h  tpm2_socket.h  tpm2_spdm.h  tpm2_swtpm.h  tpm2_tis.h  tpm2_types.h  tpm2_usb.h  tpm2_winapi.h  tpm2_wrap.h  version.h  version.h.in  visibility.h
wrapper/: include.am  wolfTPM-csharp.sln
zephyr/: CMakeLists.txt  Kconfig  README.md  include.am  module.yml  user_settings.h
zephyr/samples/wolftpm_bench/: CMakeLists.txt  install_bench.sh  prj.conf  proj.conf  sample.yml
zephyr/samples/wolftpm_test/: CMakeLists.txt  install_test.sh  prj.conf  sample.yml
zephyr/samples/wolftpm_wrap_test/: CMakeLists.txt  install_wrap_test.sh  prj.conf  sample.yaml  sample.yml
(+316 files in other folders)
